# summarize_with_llama_cpp

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh
.devcontainer/: Dockerfile  devcontainer.json  start_with_devcontainer_cli.sh
cmake/: LlamaCppSetup.cmake  ModelConfig.cmake  StatusMessage.cmake
doc/html/: annotated.html  annotated_dup.js  argument__parser_8h_source.html  classArgumentParser-members.html  classArgumentParser.html  classArgumentParser.js  classes.html  classmodel__wrapper_1_1Model-members.html  classmodel__wrapper_1_1Model.html  classmodel__wrapper_1_1Model.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  functions_vars.html  index.html  menudata.js  model_8h_source.html  navtreedata.js  navtreeindex0.js  structArgumentParser_1_1Option-members.html  structArgumentParser_1_1Option.html  structArgumentParser_1_1Option.js
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js  variables_0.js  variables_2.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js
doc/latex/: annotated.tex  argument__parser_8h_source.tex  classArgumentParser.tex  classmodel__wrapper_1_1Model.tex  files.tex  model_8h_source.tex  refman.tex  structArgumentParser_1_1Option.tex
include/: argument_parser.h  model.h
src/: argument_parser.cpp  main.cpp  model.cpp
